welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:9: error: Unit does not take parameters
		baisseBrosse()()
                              ^